--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,6 @@
-service:
-  annotations:
-    prometheus.io/scrape: 'false'
-  #type: ClusterIP
-  type: NodePort
-  nodePort: 30193
-
-# deployment
-nodeSelector:
-  staging: worker
+pdb:
+  minAvailable: 1
+replicas: 2
 
 resources:
   requests:
@@ -17,28 +10,46 @@ resources:
     cpu: "0.5"
     memory: 512Mi
 
-dind:
-  enabled: true
-  hostSocketDir: /var/run/dind_auth
-  hostLibDir: /var/lib/dind_auth
-
-imageCleaner:
-  enabled: false
-
 config:
+  GitHubRepoProvider:
+    # Add banned repositories to the list below
+    # They should be strings that will match "^<org-name>/<repo-name>.*"
+    banned_specs:
+      # e.g. '^org/repo.*'
+      - ^ines/spacy-binder.*
+      - ^soft4voip/rak.*
+      - ^hmharshit/cn-ait.*
+      - ^shishirchoudharygic/mltraining.*
+      - ^hmharshit/mltraining.*
   BinderHub:
     debug: true
-    hub_url: https://notebooks-test.gesis.org/jupyter/
+    hub_url: https://notebooks-test.gesis.org
 
     use_registry: true
-    image_prefix: gesiscss/orc-auth-binder-
-    build_image: jupyter/repo2docker:f18835fd
-    per_repo_quota: 100
+    image_prefix: gesiscss/orc-example-binder-
+    build_image: jupyter/repo2docker:9c559d2a
     build_node_selector:
-      build: workers
+      user: worker
+    per_repo_quota: 100
+    per_repo_quota_higher: 200
+
+service:
+  annotations:
+    prometheus.io/scrape: 'false'
+  #type: ClusterIP
+  type: NodePort
+  nodePort: 30193
 
 cors: &cors
   allowOrigin: "*"
+
+dind:
+  enabled: true
+  hostSocketDir: /var/run/dind_example
+  hostLibDir: /var/lib/dind_example
+
+imageCleaner:
+  enabled: false
 
 jupyterhub:
   custom:
@@ -47,23 +58,25 @@ jupyterhub:
     enabled: true
 
   hub:
+    pdb:
+      minAvailable: 0
     service:
       annotations:
         prometheus.io/scrape: 'false'
-    baseUrl: /jupyter/
-    nodeSelector:
-      staging: worker
 
     extraConfig:
       hub_extra: |
         c.JupyterHub.redirect_to_server = False
-        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
+      hub_config: |
+        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org'
         if "cookie_options" in c.JupyterHub.tornado_settings:
           c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
         else:
           c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
       neverRestart: |
         c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
+      noAuthMetrics: |
+        c.JupyterHub.authenticate_prometheus = False
 
     resources:
       requests:
@@ -74,8 +87,8 @@ jupyterhub:
         memory: 512Mi
 
   proxy:
-    nodeSelector:
-      staging: worker
+    pdb:
+      minAvailable: 0
     # https://zero-to-jupyterhub.readthedocs.io/en/stable/security.html#https
     https:
       enablde: false
@@ -95,10 +108,18 @@ jupyterhub:
 
   singleuser:
     nodeSelector:
-      user: workers
+      user: worker
     cpu:
       guarantee: 0.1
       limit: 0.5
     memory:
       guarantee: 512M
       limit: 512M
+
+  scheduling:
+    userScheduler:
+      enabled: false
+    podPriority:
+      enabled: false
+    userPlaceholder:
+      enabled: false
