--- a/load_balancer.conf
+++ b/load_balancer.conf
@@ -7,21 +7,14 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
-upstream bhub {
-  server 194.95.75.10:30193;
+upstream bhub-test {
+  server 194.95.75.9:30193;
+  server 194.95.75.12:30193;
 }
 
-upstream jhub {
-  server 194.95.75.10:30190;
-}
-
-server {
-    listen 80 default_server;
-    listen 443 ssl default_server;
-    server_name _;
-    ssl_certificate /etc/letsencrypt_volume/live/notebooks-test.gesis.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt_volume/live/notebooks-test.gesis.org/privkey.pem;
-    return 404;
+upstream jhub-test {
+  server 194.95.75.9:30190;
+  server 194.95.75.12:30190;
 }
 
 # HTTP server to redirect notebooks-test.gesis.org 80 traffic to SSL/HTTPS
@@ -33,19 +26,17 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTPS server
+# HTTPS server for notebooks-test.gesis.org
 server {
     listen 443;
     ssl on;
-
     server_name notebooks-test.gesis.org;
-
-    ssl_certificate /etc/letsencrypt_volume/live/notebooks-test.gesis.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt_volume/live/notebooks-test.gesis.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/notebooks-test.gesis.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/notebooks-test.gesis.org/privkey.pem;
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
-    ssl_dhparam /etc/letsencrypt_volume/dhparam_test.pem;
+    ssl_dhparam /etc/letsencrypt/dhparam.pem;
     ssl_ciphers "ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS";
     # https://docs.nginx.com/nginx/admin-guide/security-controls/terminating-ssl-http/#https-server-optimization
     ssl_session_timeout 1d;
@@ -54,32 +45,51 @@ server {
     ssl_stapling_verify on;
     add_header Strict-Transport-Security max-age=15768000;
 
-    location = /favicon.ico { access_log off; log_not_found off; }
+    access_log off;  # turn off access log
+    client_body_buffer_size 128k;  # default is 8k|16k;
+    client_max_body_size 1G;  # default is 1M
+    proxy_buffers 32 32k;
+    proxy_buffer_size 32k;
+    # https://stackoverflow.com/questions/24453388/nginx-reverse-proxy-causing-504-gateway-timeout/36589120#36589120
+    proxy_http_version 1.1;  # default is 1.0
+    proxy_connect_timeout 120s;  # default is 60s
+    proxy_send_timeout 120s;  # default is 60s
+    proxy_read_timeout 120s;  # default is 60s
 
-    # for webroot plugin - https://certbot.eff.org/docs/using.html#webroot
-	location ^~ /.well-known/acme-challenge {
-        root /var/www/html;
-	}
-	location = /.well-known/acme-challenge/ {
-		return 404;
-	}
+    location = /favicon.ico { access_log off; log_not_found off; }
 
     location / {
         proxy_buffering off;
 
-        proxy_pass http://bhub;
+        proxy_pass http://bhub-test;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-    location /jupyter/ {
-        proxy_pass http://jhub;
+    location ~* ^/hub/?(.*)$ {
+        proxy_pass http://jhub-test;
+
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # websocket headers
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+    }
+    location ~* ^/(user|services)/?(.*)$ {
+        proxy_pass http://jhub-test;
+
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # websocket headers
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+
+    location = /robots.txt {
+       add_header Content-Type text/plain;
+       return 200 "User-agent: *\nDisallow: /\n";
     }
 }
