--- a/load_balancer.conf
+++ b/load_balancer.conf
@@ -65,9 +65,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Scheme $scheme;
         }
 
     location ~* ^/hub/?(.*)$ {
+        proxy_buffering off;
         proxy_pass http://jhub-test;
 
         proxy_set_header X-Real-IP $remote_addr;
@@ -76,6 +78,8 @@ server {
         # websocket headers
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+        #proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Scheme $scheme;
     }
     location ~* ^/(user|services)/?(.*)$ {
         proxy_pass http://jhub-test;
@@ -86,6 +90,8 @@ server {
         # websocket headers
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+        #proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Scheme $scheme;
     }
 
     location = /robots.txt {
