--- a/auth_with_named_servers.yaml
+++ b/auth_with_named_servers.yaml
@@ -4,7 +4,7 @@ config:
 jupyterhub:
   hub:
     extraConfig:
-      hub_extra: |
+      hub_named: |
         c.JupyterHub.named_server_limit_per_user = 2
     allowNamedServers: true
     #namedServerLimitPerUser: 2
