jhub baseurl /jupyter/

--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ config:
       - ^hmharshit/mltraining.*
   BinderHub:
     debug: true
-    hub_url: https://notebooks-test.gesis.org
+    hub_url: https://notebooks-test.gesis.org/jupyter/
 
     use_registry: true
     image_prefix: gesiscss/orc-example-binder-
@@ -58,6 +58,7 @@ jupyterhub:
     enabled: true
 
   hub:
+    baseUrl: /jupyter/
     pdb:
       minAvailable: 0
     service:
@@ -68,7 +69,7 @@ jupyterhub:
       hub_extra: |
         c.JupyterHub.redirect_to_server = False
       hub_config: |
-        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org'
+        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
         if "cookie_options" in c.JupyterHub.tornado_settings:
           c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
         else:
