--- a/load_balancer.conf
+++ b/load_balancer.conf
@@ -68,20 +68,8 @@ server {
         proxy_set_header X-Scheme $scheme;
         }
 
-    location ~* ^/hub/?(.*)$ {
+    location /jupyter/ {
         proxy_buffering off;
-        proxy_pass http://jhub-test;
-
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # websocket headers
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        #proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Scheme $scheme;
-    }
-    location ~* ^/(user|services)/?(.*)$ {
         proxy_pass http://jhub-test;
 
         proxy_set_header X-Real-IP $remote_addr;
