--- a/persistent_storage/load_balancer.conf
+++ b/persistent_storage/load_balancer.conf
@@ -55,11 +55,15 @@ server {
 
     location /services/binder/ {
         proxy_buffering off;
+        proxy_pass http://jhub-test;
 
-        proxy_pass http://bhub-test;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # websocket headers
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        #proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Scheme $scheme;
         }
 
