--- a/persistent_storage/load_balancer.conf
+++ b/persistent_storage/load_balancer.conf
@@ -8,8 +8,8 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream jhub-test {
-  server 194.95.75.9:30190;
-  server 194.95.75.12:30190;
+  server 194.95.75.9:30190 max_fails=0;
+  server 194.95.75.12:30190 max_fails=0;
 }
 
 # HTTP server to redirect notebooks-test.gesis.org 80 traffic to SSL/HTTPS
@@ -47,25 +47,12 @@ server {
     proxy_buffer_size 32k;
     # https://stackoverflow.com/questions/24453388/nginx-reverse-proxy-causing-504-gateway-timeout/36589120#36589120
     proxy_http_version 1.1;  # default is 1.0
-    proxy_connect_timeout 120s;  # default is 60s
-    proxy_send_timeout 120s;  # default is 60s
-    proxy_read_timeout 120s;  # default is 60s
+    proxy_connect_timeout 300s;  # default is 60s
+    proxy_send_timeout 300s;  # default is 60s
+    proxy_read_timeout 300s;  # default is 60s
+    send_timeout 300s;  # default is 60s
 
     location = /favicon.ico { access_log off; log_not_found off; }
-
-    location /services/binder/ {
-        proxy_buffering off;
-        proxy_pass http://jhub-test;
-
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # websocket headers
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        #proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Scheme $scheme;
-        }
 
     location / {
         proxy_buffering off;
@@ -80,6 +67,11 @@ server {
         #proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Scheme $scheme;
     }
+
+    # don't show bhub index and loading pages. instead redirect user to jhub home
+    #location ~ ^/services/binder/($|v2/.*) {
+    #    return 301 /;
+    #}
 
     location = /robots.txt {
        add_header Content-Type text/plain;
