--- a/auth.yaml
+++ b/auth.yaml
@@ -1,39 +1,40 @@
-config:
-  BinderHub:
-    auth_enabled: true
+binderhub:
+  config:
+    BinderHub:
+      auth_enabled: true
 
-jupyterhub:
-  hub:
-    redirectToServer: false
-    services:
-      binder:
-        oauth_redirect_uri: "https://notebooks-test.gesis.org/oauth_callback"
-        oauth_client_id: "binder-oauth-client-test"
+  jupyterhub:
+    hub:
+      redirectToServer: false
+      services:
+        binder:
+          oauth_redirect_uri: "https://notebooks-test.gesis.org/oauth_callback"
+          oauth_client_id: "binder-oauth-client-test"
 
-    extraConfig:
-      binder: |
-        from kubespawner import KubeSpawner
+      extraConfig:
+        binder: |
+          from kubespawner import KubeSpawner
 
-        class BinderSpawner(KubeSpawner):
-          def start(self):
-              if 'image' in self.user_options:
-                # binder service sets the image spec via user options
-                self.image = self.user_options['image']
-              return super().start()
-        c.JupyterHub.spawner_class = BinderSpawner
+          class BinderSpawner(KubeSpawner):
+            def start(self):
+                if 'image' in self.user_options:
+                  # binder service sets the image spec via user options
+                  self.image = self.user_options['image']
+                return super().start()
+          c.JupyterHub.spawner_class = BinderSpawner
 
-  auth:
-    type: github
-    github:
-      # to make notebook servers aware of hub
-      callbackUrl: "https://notebooks-test.gesis.org/hub/oauth_callback"
-    scopes:
-      - "read:user"
-    admin:
-      users: ['bitnik', 'arnim']
+    auth:
+      type: github
+      github:
+        # to make notebook servers aware of hub
+        callbackUrl: "https://notebooks-test.gesis.org/hub/oauth_callback"
+      scopes:
+        - "read:user"
+      admin:
+        users: ['bitnik', 'arnim']
 
-  singleuser:
-    cmd: jupyterhub-singleuser
+    singleuser:
+      cmd: jupyterhub-singleuser
 
-  cull:
-    users: False
+    cull:
+      users: False
