--- a/custom_templates.yaml
+++ b/custom_templates.yaml
@@ -1,31 +1,16 @@
-# clone custom binder templates into a volume
-initContainers:
-  - name: git-clone-templates
-    image: alpine/git
-    args:
-      - clone
-      - --single-branch
-      - --branch=master
-      - --depth=1
-      - --
-      - https://github.com/gesiscss/example-binderhub-deployments.git
-      - /etc/binderhub/custom
-    securityContext:
-      runAsUser: 0
-    volumeMounts:
-      - name: custom-templates
-        mountPath: /etc/binderhub/custom
-extraVolumes:
-  - name: custom-templates
-    emptyDir: {}
-extraVolumeMounts:
-  - name: custom-templates
-    mountPath: /etc/binderhub/custom
+binderhub:
+  config:
+    BinderHub:
+      template_path: /etc/binderhub/templates
+      extra_static_path: /etc/binderhub/templates
+      extra_static_url_prefix: /extra_static/
+      template_variables:
+          EXTRA_STATIC_URL_PREFIX: "/extra_static/"
 
-config:
-  BinderHub:
-    template_path: /etc/binderhub/custom/templates
-    extra_static_path: /etc/binderhub/custom/static
-    extra_static_url_prefix: /extra_static/
-    template_variables:
-        EXTRA_STATIC_URL_PREFIX: "/extra_static/"
+  extraVolumes:
+    - name: binder-templates
+      configMap:
+        name: binder-templates
+  extraVolumeMounts:
+    - name: binder-templates
+      mountPath: /etc/binderhub/templates
